# UnspokenThoughts

./: Cargo.toml  README.md
licenses/: LICENCE_ARTCONCEPT.txt  LICENSE-THIRD-PARTY,txt  LICENSE_VISUALS.txt
software/backend/: Cargo.toml  build.rs
software/backend/src/: event.rs  logging.rs  main.rs  message.rs  port_handler.rs  tcp_server.rs
src/: main.rs
