[package]
name = "UnspokenThoughts"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
prost = "0.14"
prost-types = "0.14"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
futures   = "0.3"    


[build-dependencies]
prost-build = "0.14"